# jarvis-2.0

./: .env  .gitignore  README.md  pyproject.toml
jarvis/: GlobalVariable.py  main.py
jarvis/Services/: GreetingService.py  SpeechRecognitionService.py  SpeechService.py  TaskService.py
jarvis/Tasks/: ChatGptTask.py  SystemTask.py
jarvis/resources/: __init__.py
jarvis/ui/: jarvis_ui.py
