[tool.poetry]
name = "jarvis-2-0"
version = "0.1.0"
description = ""
authors = ["sujan787 <sujanmoi787@gmail.com>"]
readme = "README.md"
packages = [{include = "jarvis_2"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
pyttsx3 = "^2.90"
wikipedia = "^1.4.0"
keyboard = "^0.13.5"
pyqt5 = "^5.15.9"
speechrecognition = "^3.10.0"
pyaudio = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
